style(ui): use scrollbar-gutter stable to prevent layout shifting when bottomsheets open

--- a/src/main.css
+++ b/src/main.css
@@ -75,6 +75,9 @@
 }
 
 @layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
   body {
     @apply bg-canvas text-graphite font-sans antialiased;
   }
